crates/parser/tests/snapshots/block_string_gen_folded_i2_clip_emptyln_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-gen-folded-i2-clip-emptyln-dedent

## Input

```
key >2
  a

  b
end marker

```

## CST

```
SOURCE_FILE@0..27
  ENTRY@0..16
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..16
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        NUMERAL@5..6 "2"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..10
        STRING@9..10 "a"
      NEWLINE@10..11 "\n"
      LINE_STRING@11..11
      NEWLINE@11..12 "\n"
      SPACE@12..14 "  "
      LINE_STRING@14..15
        STRING@14..15 "b"
      NEWLINE@15..16 "\n"
  ENTRY@16..27
    WORD_KEY@16..19
      WORD@16..19 "end"
    SPACE@19..20 " "
    LINE_STRING@20..26
      STRING@20..26 "marker"
    NEWLINE@26..27 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    indent: NUMERAL@5..6 "2",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@9..10 "a",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@14..15 "b",
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@16..19 "end",
            },
            value: LineString {
                string: STRING@20..26 "marker",
            },
        },
    ],
}
```

vim:ft=markdown
