crates/parser/tests/snapshots/block_string_gen_folded_i2_clip_simple_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-gen-folded-i2-clip-simple-dedent

## Input

```
key >2
  a
  b
end marker

```

## CST

```
SOURCE_FILE@0..26
  ENTRY@0..15
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..15
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        NUMERAL@5..6 "2"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..10
        STRING@9..10 "a"
      NEWLINE@10..11 "\n"
      SPACE@11..13 "  "
      LINE_STRING@13..14
        STRING@13..14 "b"
      NEWLINE@14..15 "\n"
  ENTRY@15..26
    WORD_KEY@15..18
      WORD@15..18 "end"
    SPACE@18..19 " "
    LINE_STRING@19..25
      STRING@19..25 "marker"
    NEWLINE@25..26 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    indent: NUMERAL@5..6 "2",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@9..10 "a",
                    },
                    LineString {
                        string: STRING@13..14 "b",
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@15..18 "end",
            },
            value: LineString {
                string: STRING@19..25 "marker",
            },
        },
    ],
}
```

vim:ft=markdown
